# python-yolo

./: .gitignore  pyproject.toml
cmd/video/: video.py
pkg/hello_yolo/: detection.py  hello_yolo.py  predict.py  train.py
test/: test.py
train_config/: custom.yaml
